<resources>
    <string name="app_name">Lishipin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_live_video">直播</string>
    <string name="title_subscribe">订阅</string>
    <string name="title_paike">拍客</string>
    <string name="title_my">我的</string>
</resources>
