<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/toppager_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_live_video"
        android:icon="@drawable/livevideo_selector"
        android:title="@string/title_live_video"/>

    <item
        android:id="@+id/navigation_subscribe"
        android:icon="@drawable/subscribe_selector"
        android:title="@string/title_subscribe"/>

    <item
        android:id="@+id/navigation_paike"
        android:icon="@drawable/paike_selector"
        android:title="@string/title_paike"/>

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/my_selector"
        android:title="@string/title_my"/>

</menu>
